@@ -1,3 +1,8 @@
+2005-07-20  Rodrigo Moya <rodrigo@novell.com>
+
+	* C/config-screensaver.xml: specify the fact that it works with both
+	xscreensaver and gnome-screensaver.
+
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
